force-app/main/default/objects/GecoTimeBooking__c/GecoTimeBooking__c.object-meta.xml
<CustomObject>
    <label>Geco Time Booking</label>
    <nameField>
        <displayFormat>GTB-{0000000000}</displayFormat>
        <label>Geco Time Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geco Time Bookings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>