force-app/main/default/objects/GecoTimeBooking__c/fields/BookingDate__c.field-meta.xml
<CustomField>
    <fullName>BookingDate__c</fullName>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>