force-app/main/default/objects/GecoTimeBooking__c/fields/GecoJSO__c.field-meta.xml
<CustomField>
    <fullName>GecoJSO__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Geco JSO</label>
    <referenceTo>GecoJSO__c</referenceTo>
    <relationshipLabel>Geco Time Bookings</relationshipLabel>
    <relationshipName>GecoTimeBookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>