force-app/main/default/objects/GecoTimeBooking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hours__c</columns>
    <columns>Notes__c</columns>
    <columns>BookingDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>